attempt to fix the position image on tablet version

--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -4,12 +4,6 @@
   background-size: cover;
 
   @include onTablet {
-    background-image: url(../images/header_bg_tablet.png);
-    background-position: 100%;
-  }
-
-  @include onDesktop {
-    background-image: url(../images/header_bg.png);
     background-position: center;
   }
 
@@ -18,6 +12,10 @@
     height: 100vh;
     flex-direction: column;
     justify-content: space-between;
+
+    @include onTablet {
+      max-height: 84.41vw;
+    }
   }
 
   &__title {
